@@ -68,7 +68,7 @@
 #include <dmalloc.h>
 #endif
 
-static char software_version[] = "$Id: odbc.c,v 1.271 2003-11-30 03:27:42 jklowden Exp $";
+static char software_version[] = "$Id: odbc.c,v 1.272 2003-11-30 12:02:06 freddy77 Exp $";
 static void *no_unused_var_warn[] = { software_version, no_unused_var_warn };
 
 static SQLRETURN SQL_API _SQLAllocConnect(SQLHENV henv, SQLHDBC FAR * phdbc);
@@ -477,6 +477,9 @@ SQLMoreResults(SQLHSTMT hstmt)
 	INIT_HSTMT;
 
 	tds = stmt->dbc->tds_socket;
+
+	if (stmt->dbc->current_statement != stmt)
+		ODBC_RETURN(stmt, SQL_NO_DATA_FOUND);
 
 	/* try to go to the next recordset */
 	for (;;) {
@@ -2383,7 +2386,6 @@ _SQLExecute(TDS_STMT * stmt)
 			done = 1;
 			break;
 
-			/* TODO test flags ? check error and change result ? */
 		case TDS_DONEINPROC_RESULT:
 			if(done_flags & TDS_DONE_ERROR)
 				result = SQL_ERROR;
