@@ -1,3 +1,11 @@
+Sun Nov 30 13:00:17 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
+	* include/cspublic.h include/tds.h src/ctlib/cs.c:
+	* src/ctlib/ct.c src/tds/convert.c src/tds/token.c:
+	- applied Alex Kiesel patch on UNI(VAR)CHAR
+	* src/odbc/odbc.c: 
+	- assert statement is the current one on SQLMoreResults
+	* src/tds/character_sets.h: update
+
 Sat Nov 29 22:04:10 EST 2003	JK Lowden <jklowden@schemamania.org>
 	* src/odbc/odbc.c 
 	- applied 2-line  patch from nj-freetds@talbott.ws
